# Toriel-IDE

./: BETAINFO.md  CMakeLists.txt  GPC_Data.json  LICENSE  README.md  main.cpp  package_parser.cpp  settings.cpp  settings.h  torielwindow.cpp  torielwindow.ui
src/: autocomplete.cpp  autocomplete.h  closingpairs.cpp  closingpairs.h  explorer.cpp  explorer.h  package_parser.cpp  package_parser.h  parser.cpp  parser.h  processor.cpp  processor.h  syntax.cpp  theme.cpp  theme.h  torielwindow.cpp  torielwindow.h  torielwindow.ui  zenstudio.cpp  zenstudio.h
